--- a/css/animatedGrid.css
+++ b/css/animatedGrid.css
@@ -24,8 +24,19 @@
 	-o-transform: scale(1.2);
 	transform: scale(1.2);
 
-	box-shadow: 0 0 20px rgba(0,0,0,.5);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
-	-webkit-transition: .2s transform, .2s opacity;
-	-webkit-transition-delay: .05s;
+	-webkit-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+						opacity 	.1s linear .2s,
+						box-shadow	.2s;
+}
+
+.grid-animation.zoom-out{
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+
+	opacity: 0;
 }
