--- a/css/animatedGrid.css
+++ b/css/animatedGrid.css
@@ -1,42 +1,47 @@
 
 .animated-grid{
-	position: 	relative;
-	font-size: 	0px;
+	position: 		relative;
+	font-size: 		0px;
 }
 
 .grid-elem{
-	display: 	inline-block;
+	display: 		inline-block;
 	vertical-align: top;
 }
 
 .grid-animation{
-	position: 	absolute;
-	left: 		0;
-	top: 		0;
+	position: 		absolute;
+	left: 			0;
+	top: 			0;
 
-	-webkit-transform: scale(1);
+-webkit-transform: 	scale(1);
+   -moz-transform: 	scale(1);
+    -ms-transform: 	scale(1);
+     -o-transform: 	scale(1);
+        transform: 	scale(1);
 }
 
 .grid-animation.zoom-me{
-	-webkit-transform: scale(1.2);
-	-moz-transform: scale(1.2);
-	-ms-transform: scale(1.2);
-	-o-transform: scale(1.2);
-	transform: scale(1.2);
+-webkit-transform: 	scale(1.2);
+   -moz-transform: 	scale(1.2);
+    -ms-transform: 	scale(1.2);
+     -o-transform: 	scale(1.2);
+	    transform: 	scale(1.2);
 
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	box-shadow: 	0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
-	-webkit-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
-						opacity 	.1s linear .2s,
-						box-shadow	.2s;
+-webkit-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+					box-shadow	.2s,
+					opacity 	.1s linear .2s;
 }
 
 .grid-animation.zoom-out{
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-ms-transform: scale(1);
-	-o-transform: scale(1);
-	transform: scale(1);
+-webkit-transform: 	scale(1);
+   -moz-transform: 	scale(1);
+    -ms-transform: 	scale(1);
+     -o-transform: 	scale(1);
+	    transform: 	scale(1);
 
-	opacity: 0;
+	opacity: 		0;
+	box-shadow: 	none;
 }
