--- a/css/animatedGrid.css
+++ b/css/animatedGrid.css
@@ -33,6 +33,18 @@
 -webkit-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
 					box-shadow	.2s,
 					opacity 	.1s linear .2s;
+   -moz-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+					box-shadow	.2s,
+					opacity 	.1s linear .2s;
+    -ms-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+					box-shadow	.2s,
+					opacity 	.1s linear .2s;
+     -o-transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+					box-shadow	.2s,
+					opacity 	.1s linear .2s;
+        transition: transform 	.2s cubic-bezier(0.19, 0.76, 0.66, 1.32),
+					box-shadow	.2s,
+					opacity 	.1s linear .2s;
 }
 
 .grid-animation.zoom-out{
@@ -43,5 +55,28 @@
 	    transform: 	scale(1);
 
 	opacity: 		0;
+	box-shadow: 	none;
+}
+
+.grid-perspective.zoom-out .grid-effect-3d{
+-webkit-transform: 	none !important;
+   -moz-transform: 	none !important;
+    -ms-transform: 	none !important;
+     -o-transform: 	none !important;
+	    transform: 	none !important;
+}
+
+
+/* 3d animation */
+.grid-perspective{
+-webkit-perspective: 1000;
+   -moz-perspective: 1000;
+    -ms-perspective: 1000;
+     -o-perspective: 1000;
+        perspective: 1000;
+	transform-style: preserve-3d;
+}
+
+.grid-perspective.zoom-me{
 	box-shadow: 	none;
 }
